# ick

./: .gitignore  CMakeLists.txt  README.md  main.c
ast/: type_tokens.h
data_structures/: heap_arr.h  linked_list.h  map.c  map.h  result.c  result.h  sized_str.h  sstr.c  sstr.h  trie.c  trie.h  vector.h
debug/: color_print.c  color_print.h  malloc.c  malloc.h  reminder.c  reminder.h
driver/: diagnostics.c  diagnostics.h  file_utils.c  file_utils.h
mappings/: typedefs.h
preprocessor/: char_parser.c  char_parser.h  char_rule_definitions.c  conditional_inclusion.c  conditional_inclusion.h  detector.h  diagnostics.c  diagnostics.h  escaped_newlines.c  escaped_newlines.h  lines.c  lines.h  macro_expansion.c  macro_expansion.h  parser.c  parser.h  pp_directive.c  pp_directive.h  pp_token.c  pp_token.h  preprocessor.c  preprocessor.h  rule_definitions.c  sized_str.c  sized_str.h  token_rule_definitions.c  trigraphs.c  trigraphs.h
test/: compile_this.c  compile_this.i
test/unit/data_structures/vector/: vector.c  vector.h
unfinished/: type_tokens.h  vlstr.c  vlstr.h
